# ModPlugPlayerAPI

./: CMakeLists.txt
src/: APIStructures.hpp  OutputPlugIn.hpp  PlayList.hpp  PlayListDTOs.hpp  Player.hpp  PlugIn.hpp
src/Interfaces/: FFT.hpp  MetaDataReader.hpp  ModulePlayer.hpp  OutputPlugIn.hpp  PlayList.hpp  PlayListFileFormatHandler.hpp  Player.hpp  PlayerSignals.hpp  PlugIn.hpp
